src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>CN18_Advice_of_Receipt_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Special_particulars__c,&apos;Advice of Receipt&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 Advice of Receipt img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_Airmail_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Special_particulars__c,&apos;Airmail&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 Airmail img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_B_Economic_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Nature_of_Item__c,&apos;B-Economic&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 B-Economic img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_COD__c</fullName>
        <label>CN18 COD</label>
        <picklist>
            <picklistValues>
                <fullName>COD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN18_COD_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_COD__c,&apos;COD&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 COD img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_Express_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Special_particulars__c,&apos;Express&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 Express img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_Insured_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Nature_of_Item__c,&apos;Insured&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 Insured img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_Letter_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Nature_of_Item__c,&apos;Letter&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 Letter img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_Nature_of_Item__c</fullName>
        <label>CN18 Nature of Item</label>
        <picklist>
            <picklistValues>
                <fullName>A-Prioritaire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-Economic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parcel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ordinary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recorded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CN18_Ordinary_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Nature_of_Item__c,&apos;Ordinary&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 Ordinary img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_Parcel_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Nature_of_Item__c,&apos;Parcel&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 Parcel img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_Printed_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Nature_of_Item__c,&apos;Printed&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 Printed img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_Recommended_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Nature_of_Item__c,&apos;Recommended&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 Recommended img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_Recorded_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Nature_of_Item__c,&apos;Recorded&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 Recorded img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_SAL_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Special_particulars__c,&apos;S.A.L.&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 SAL img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_Small_img__c</fullName>
        <formula>IF( 
ISPICKVAL(CN18_Nature_of_Item__c,&apos;Small&apos;) , IMAGE($Label.Checked_Radiobutton_URL, &apos;checked&apos;) , 
IMAGE($Label.Unchecked_Radiobutton_URL, &apos;unchecked&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CN18 Small img</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN18_Special_particulars__c</fullName>
        <label>CN18 Special particulars</label>
        <picklist>
            <picklistValues>
                <fullName>Airmail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S.A.L.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advice of receipt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COD_Amount__c</fullName>
        <label>COD Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Contract_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM Contract Object</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Aging_Days__c</fullName>
        <description>This formula calculates the number of days a closed case was open or the number of days an open case has been open since the date the case was created. The formula returns zero if the case has been open for less than 24 hours.</description>
        <formula>IF(IsClosed,
ROUND(ClosedDate - CreatedDate, 1), 
ROUND((NOW() - CreatedDate),1)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Aging (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Aging__c</fullName>
        <formula>IF(IsClosed,(ClosedDate - CreatedDate),(NOW() - CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Aging</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Status_Assigned_to_Queue_Date__c</fullName>
        <label>Case Status Assigned to Queue Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Status_Cancelled_Date__c</fullName>
        <label>Case Status Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Status_In_Progress_Date__c</fullName>
        <label>Case Status In Progress Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Status_Waiting_for_Info_Date__c</fullName>
        <label>Case Status Waiting for Info Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Clone_case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to trigger new case</description>
        <label>Clone_case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_C_O__c</fullName>
        <label>Comp Receiver C/O</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_City__c</fullName>
        <label>Comp Receiver City</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_Country__c</fullName>
        <label>Comp Receiver Country</label>
        <picklist>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_House_Letter__c</fullName>
        <label>Comp Receiver House Letter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_House_Number_Supplement__c</fullName>
        <label>Comp Receiver Floor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_House_Number__c</fullName>
        <label>Comp Receiver House Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_Involved_Party_ID__c</fullName>
        <formula>Compensation_Receiver__r.Involved_Party_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comp. Receiver Involved Party ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_PO_Box__c</fullName>
        <label>Comp Receiver PO Box</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_Postal_Code__c</fullName>
        <label>Comp Receiver Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_Room_Number__c</fullName>
        <label>Comp Receiver Room Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_Street__c</fullName>
        <label>Comp Receiver Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Receiver_Suburb__c</fullName>
        <label>Comp Receiver Suburb</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compensation_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compensation Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Compensation_Receiver__c</field>
                <operation>equals</operation>
                <valueField>Bank_Details__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bank_Details__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compensation_Amount__c</fullName>
        <label>Compensation Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Compensation_Receiver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compensation Receiver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Extension, Work Site, Private Person</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Compensation Receiver)</relationshipLabel>
        <relationshipName>Cases9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <picklist>
            <picklistValues>
                <fullName>Car, boat, machine and bike accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home, office, garden &amp; tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation &amp; Hobby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; drinks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dangerous and forbidden Content</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <controllingField>Reason__c</controllingField>
            <picklistValues>
                <fullName>Contract Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract AdmCom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Service Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract MarketCom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract USF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Team__c</fullName>
        <description>Set by a workflow at the time of creation. Will have the value of the Team that the user belongs to at that moment. Will never change after creation.</description>
        <label>Created by Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_my_Team__c</fullName>
        <formula>Created_by_Team__c =  TEXT($User.Team__c)</formula>
        <label>Created by my Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creator_equals_Owner__c</fullName>
        <formula>CreatedById ==  OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator equals Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Number__c</fullName>
        <label>Credit Memo Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_block__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Information from credit handler to credit controller if the credit is currently blocked.</inlineHelpText>
        <label>Credit Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_check_requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Initial creator</inlineHelpText>
        <label>Credit Check Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_control_area2__c</fullName>
        <formula>IF( ISBLANK(Product_Articles_Sales_Area__c), 
CASE(Sales_Area_Owner__c,&quot;1000&quot;,&quot;Post Danmark kreditkontrollområde&quot;, 
&quot;FO91&quot;, &quot;Posten Kreditkontrollområde&quot;, 
&quot;3670&quot;,&quot;Posten Kreditkontrollområde EUR&quot;, 
&quot;LO NO&quot;, &quot;LO NO&quot;, 
&quot;0540&quot;, &quot;LO DK&quot;, 
&quot;FO92&quot;,&quot;Posten Kreditkontrollområde&quot;, 
&quot;0630&quot;, &quot;Posten Kreditkontrollområde EUR&quot;, 
&quot;No Sales Area&quot;), 
CASE(Sales_Area_Product__c,&quot;1000&quot;, &quot;PDK BE&quot;, 
&quot;FO91&quot;, &quot;ME SE&quot;, 
&quot;3670&quot;,&quot;LO FI&quot;, 
&quot;LO NO&quot;, &quot;LO NO&quot;, 
&quot;0540&quot;, &quot;LO DK&quot;, 
&quot;FO92&quot;,&quot;LO SE&quot;, 
&quot;0630&quot;, &quot;LO FI DPD&quot;, 
&quot;No Sales Area&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit control area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_control_area__c</fullName>
        <defaultValue>CASE($User.Sales_Area1__c, &apos;1000&apos;, &apos;1000&apos;, &apos;4000&apos;, &apos;1000&apos;,&apos;FO91&apos;, &apos;KR01&apos;,&apos;0540&apos;, &apos;XX&apos;,&apos;0630&apos;, &apos;KR02&apos;,&apos;3670&apos;, &apos;KR02&apos;,&apos;LO NO&apos;, &apos;XX&apos;,&apos;FO92&apos;, &apos;KR01&apos;,&apos;XX&apos;)</defaultValue>
        <label>Credit Control Area</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_surcharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Surcharge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <formula>IF( ISBLANK(Product_Articles_Sales_Area__c),
CASE(Sales_Area_Owner__c,
&quot;1000&quot;,Account.PDK_BE_Customer_Service_Segment__c,
&quot;FO91&quot;, Account.ME_SE_Customer_Service_Segment__c,
&quot;3670&quot;, Account.LO_FI_Customer_Service_Segment__c,
&quot;LO NO&quot;, Account.LO_NO_Customer_Service_Segment__c,
&quot;FO92&quot;,Account.LO_SE_Customer_Service_Segment__c,
&quot;0630&quot;, Account.LO_FI_DPD_Customer_Service_Segment__c,
&quot;4000&quot;, Account.PDK_LO_Customer_Service_Segment__c,
&quot;LO DK&quot;, Account.LO_DK_Customer_Service_Segment__c,
&quot;No Sales Area&quot;),
CASE(Sales_Area_Product__c,
&quot;1000&quot;, Account.PDK_BE_Customer_Service_Segment__c,
&quot;FO91&quot;, Account.ME_SE_Customer_Service_Segment__c,
&quot;3670&quot;, Account.LO_FI_Customer_Service_Segment__c,
&quot;LO NO&quot;, Account.LO_NO_Customer_Service_Segment__c,
&quot;FO92&quot;, Account.LO_SE_Customer_Service_Segment__c,
&quot;0630&quot;, Account.LO_FI_DPD_Customer_Service_Segment__c,
&quot;4000&quot;, Account.PDK_LO_Customer_Service_Segment__c,
&quot;LO DK&quot;, Account.LO_DK_Customer_Service_Segment__c,
&quot;No Sales Area&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Contract_Sent__c</fullName>
        <label>Date Contract Sent to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_material_delivered__c</fullName>
        <label>Date material delivered to Sales Rep</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_materials_needed__c</fullName>
        <label>Date materials needed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Appeal__c</fullName>
        <label>Date of Appeal</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Marked_for_Deletion__c</fullName>
        <label>Date of Marked for Deletion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_mistake__c</fullName>
        <label>Date of mistake</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_signed_contract_received__c</fullName>
        <inlineHelpText>Date that. Sales. Support received the signed contract</inlineHelpText>
        <label>Date signed contract received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliver_Item_To__c</fullName>
        <label>Deliver Item to</label>
        <picklist>
            <picklistValues>
                <fullName>Sender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receiver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deliver_Material_To__c</fullName>
        <inlineHelpText>Who should the material that has been ordered be delivered to</inlineHelpText>
        <label>Deliver Material To</label>
        <picklist>
            <picklistValues>
                <fullName>Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DeliveryPoint_Name__c</fullName>
        <label>DeliveryPoint Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_period__c</fullName>
        <label>Delivery period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Content__c</fullName>
        <label>Description of Content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_packaging__c</fullName>
        <label>Description of Packaging</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Destination_exchange_office__c</fullName>
        <label>Destination Exchange Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detailed_Content__c</fullName>
        <label>Detailed Content</label>
        <picklist>
            <controllingField>Content__c</controllingField>
            <picklistValues>
                <fullName>Jewelry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gaming consols</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ipod, MP3, TV and radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ipad, PC, laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photo equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory-card, USB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD, CD, record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer games and programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toys and collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stamps and packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guns, gunparts etc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Reason__c</fullName>
        <label>Detailed Reason</label>
        <picklist>
            <controllingField>Reason__c</controllingField>
            <picklistValues>
                <fullName>Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fragtpapirer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farligt gods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Told</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miljø</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modtager flex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nej tak til reklamer /gratis aviser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post til døren, §9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forwarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Choice of collection point</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åbningstider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postkasser / Tømningstidspunkt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PostNord fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disruption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Login</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permissions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uploading of files</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Statistic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales-Agreement-Backdating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales-Agreement-Customer number not connected to contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales - Agreement - Order heavy contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales-Agreement-Converting error New pricemodel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change of lay time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>